// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sfc ref transform $ unwrapping 1`] = `
"import { ref, shallowRef } from 'vue'
    
export default {
  setup(__props, { expose }) {
  expose();

    let foo = (ref())
    let a = (ref(1))
    let b = (shallowRef({
      count: 0
    }))
    let c = () => {}
    let d
    
return { get foo(){return foo}, set foo(v){foo=v}, get a(){return a}, set a(v){a=v}, get b(){return b}, set b(v){b=v}, get c(){return c}, set c(v){c=v}, get d(){return d}, set d(v){d=v}, get ref(){return ref}, get shallowRef(){return shallowRef} }
}

}"
`;

exports[`sfc ref transform $ref & $shallowRef declarations 1`] = `
"import { ref as _ref, shallowRef as _shallowRef } from 'vue'

export default {
  setup(__props, { expose }) {
  expose();

    let foo = _ref()
    let a = _ref(1)
    let b = _shallowRef({
      count: 0
    })
    let c = () => {}
    let d
    
return { get foo(){return foo}, set foo(v){foo=v}, get a(){return a}, set a(v){a=v}, get b(){return b}, set b(v){b=v}, get c(){return c}, set c(v){c=v}, get d(){return d}, set d(v){d=v} }
}

}"
`;

exports[`sfc ref transform usage /w typescript 1`] = `
"import { ref as _ref, defineComponent as _defineComponent } from 'vue'

export default /*#__PURE__*/_defineComponent({
  setup(__props, { expose }) {
  expose();

        let msg = _ref<string | number>('foo');
        let bar = _ref <string | number>('bar');
      
return { get msg(){return msg}, set msg(v){msg=v}, get bar(){return bar}, set bar(v){bar=v} }
}

})"
`;

exports[`sfc ref transform usage in normal <script> 1`] = `
"import { ref as _ref } from 'vue'

    export default {
      setup() {
        let count = _ref(0)
        const inc = () => count.value++
        return ({ count })
      }
    }
    "
`;

exports[`sfc ref transform usage with normal <script> (has macro usage) + <script setup> (no macro usage) 1`] = `
"import { ref as _ref } from 'vue'

    let data = _ref()
    
export default {
  setup(__props, { expose }) {
  expose();

    console.log(data.value)
    
return { get data(){return data}, set data(v){data=v} }
}

}"
`;

exports[`sfc ref transform usage with normal <script> + <script setup> 1`] = `
"import { ref as _ref } from 'vue'

    let a = _ref(0)
    let c = _ref(0)
    
export default {
  setup(__props, { expose }) {
  expose();

    let b = _ref(0)
    let c = 0
    function change() {
      a.value++
      b.value++
      c++
    }
    
return { get a(){return a}, set a(v){a=v}, get c(){return c}, set c(v){c=v}, get b(){return b}, set b(v){b=v}, change }
}

}"
`;
